@@ -46,7 +46,7 @@ public class TypeDeclarationFactory {
 			ecmaVersion = ecmaVersion == null ? getDefaultECMAVersion() : ecmaVersion;
 			//try to instantiate classes
 			Class<?> ecmaClass = TypeDeclarationFactory.class.getClassLoader().loadClass(ecmaVersion);
-		 	ecma = (TypeDeclarations) ecmaClass.newInstance();
+		 	ecma = (TypeDeclarations) ecmaClass.getDeclaredConstructor().newInstance();
 		}
 		catch(Exception e)
 		{
